--- a/LANDING-PAGE/index.html
+++ b/LANDING-PAGE/index.html
@@ -104,43 +104,56 @@
                     <img src="assets/laptop-ilus.png" width="90%">
                 </div>
                 <div class="col-12 col-lg-6 col-md-12 col-sm-12 my-auto wow fadeInRight">
-                    <div>
-                        <h3 style="color: var(--blue); font-weight: bold;">
-                            A new way to manage your <span style="color: var(--yellow);">goals</span>
-                        </h3>
-                        <p style="color: var(--textgrey); font-weight: bold;" class="ps-4">
-                            keep track with your progress <br>
-                            and help remind you with your goals
-                        </p>
+                    <div class="d-flex">
+                        <div class="number-box my-auto me-3 text-center"> 1 </div>
+                        <div>
+                            <h3 class="fw-bold">
+                                A new way to manage your goals
+                            </h3>
+                            <p class="text-muted">
+                                keep track with your progress <br>
+                                and help remind you with your goals
+                            </p>
+                        </div>
+
                     </div>
 
-                    <div>
-                        <h3 style="color: var(--blue); font-weight: bold;">
-                            Create a new <span style="color: var(--blue-green);">habit</span>
-                        </h3>
-                        <p style="color: var(--textgrey); font-weight: bold;" class="ps-4">
-                            21 days habits track for achieve new habits
-                        </p>
+                    <div class="d-flex">
+                        <div class="number-box my-auto me-3 text-center"> 2 </div>
+                        <div>
+                            <h3 class="fw-bold">
+                                Create a new habit
+                            </h3>
+                            <p class="text-muted">
+                                21 days habits track for achieve new habits
+                            </p>
+                        </div>
                     </div>
 
-                    <div>
-                        <h3 style="color: var(--blue); font-weight: bold;">
-                            Give yourself  special <span style="color: var(--red);">gift</span>
-                        </h3>
-                        <p style="color: var(--textgrey); font-weight: bold;" class="ps-4">
-                            a reward feauture for you after completing <br>
-                            some task to bring motivation to do more
-                        </p>
+                    <div class="d-flex">
+                        <div class="number-box my-auto me-3 text-center"> 1 </div>
+                        <div>
+                            <h3 class="fw-bold">
+                                Give yourself  special gift
+                            </h3>
+                            <p class="text-muted">
+                                a reward feauture for you after completing <br>
+                                some task to bring motivation to do more
+                            </p>
+                        </div>
                     </div>
 
-                    <div>
-                        <h3 style="color: var(--blue); font-weight: bold;">
-                            Customized <span style="color: var(--darkblue);">task</span>
-                        </h3>
-                        <p style="color: var(--textgrey); font-weight: bold;" class="ps-4">
-                            Be yourself and express your style  with <br>
-                            customized task
-                        </p>
+                    <div class="d-flex">
+                        <div class="number-box my-auto me-3 text-center"> 1 </div>
+                        <div>
+                            <h3 class="fw-bold">
+                                Customized task
+                            </h3>
+                            <p class="text-muted">
+                                Be yourself and express your style  with <br>
+                                customized task
+                            </p>
+                        </div>
                     </div>
 
 
